--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ GENERATE_SOURCEMAP=false
 
 ## Backend API URL
 PUBLIC_URL = https://mantisdashboard.io/
-VITE_APP_BASE_NAME = /login
+VITE_APP_BASE_NAME = /
